# Recorder

./: .gitignore  CMakeLists.txt  main.cpp  mainform.cpp  mainform.h  mainform.ui
Interface/: ICapture.h  IEventListen.h
